fix: Cluster handling